    of a value type named 'TestValue' got the name 'mTestvalue' but
    should be mTestValue. Take care since this changes the interface
    of the generated code!
  * Generated service level exceptions are now abstract to prevent
    them from being directly used.
  * The BaseRuntimeException and the BaseException now log
    the fact that they are created with the loglevel FINE.
    So if you are in the situation that you have to find
    an exception that is swallowed somewhere accidentally,
    you can use this output to find it again.
  * Log formatter ignores the category field but now outputs
    the last 9 characters of the thread name. In case of a
    ordinary log record the the name of the logger thread is
    used. This might be wrong in certain setups but is
    correct in many cases. The fawkeZ loggable records the
    thread name of the thread that created the loggable instance
    which is the correct thread name in all cases. #58
  * Using the jEdit (www.jedit.org) syntax highlighter package to render
    the html files. This allows to open the report for
    other source files than *.java. The jEdit library
    needs to be re-packed currently for reuse. So make sure to
    have jedit-syntax.jar on your classpath for the reports to be
    generated. See also http://sourceforge.net/tracker/?func=detail&aid=2758414&group_id=588&atid=350588
    Also the detail displayed in the output has been enhanced.
  * Implemented #66, see
    http://www.jcoderz.org/fawkez/wiki/ValueObject#DealingwithmutablefieldsintheValueObject
    for details.

Fawkez 1.1 'The Man Trap' (March 31, 2007)
http://www.jcoderz.org/fawkez/browser/tags/FAWKEZ_1_1_0

  * New features: #34
  * Added new severity levels as proposed in #16
  * Fixed bugs: #10
  * added fb-contrib support #14 (V3.0.5)
  * added up-to-date check for retrieve-3rd-party-libs target

Fawkez 1.0 'going public' (November 26, 2006)
http://www.jcoderz.org/fawkez/browser/tags/FAWKEZ_1_0_0