@@ -55,6 +55,8 @@ Fawkez 1.2 'Charlie X'
   * Implemented #66, see
     http://www.jcoderz.org/fawkez/wiki/ValueObject#DealingwithmutablefieldsintheValueObject
     for details.
+  * Generated UserTypes now also have a static method that returns the
+    Hibernate Type compatible type wrapped vi CustomType class. #67
 
 Fawkez 1.1 'The Man Trap' (March 31, 2007)
 http://www.jcoderz.org/fawkez/browser/tags/FAWKEZ_1_1_0
